# vessel-tools

./: CMakeLists.txt  README.md
IO/: CMakeLists.txt  append_volumes.cpp  convert_slices_to_vol.cpp  convert_tiff.cpp  extract_channels.cpp
ImageJ/: SkeletonScript.bsh  ThicknessScript.bsh  WekaSegScriptFinal.bsh
analysis/: CMakeLists.txt  compute_statistics.cpp
lib/: itkAnisotropicDiffusionVesselEnhancementFunction.h  itkAnisotropicDiffusionVesselEnhancementFunction.txx  itkAnisotropicDiffusionVesselEnhancementImageFilter.h  itkAnisotropicDiffusionVesselEnhancementImageFilter.txx  itkBinariseVesselResponseFilter.h  itkBinariseVesselResponseFilter.txx  itkBrainMaskFromCTFilter.h  itkBrainMaskFromCTFilter.txx  itkCustomHessian3DToVesselnessMeasureImageFilter.h  itkCustomHessian3DToVesselnessMeasureImageFilter.hxx  itkHessian2DToVesselnessMeasureImageFilter.h  itkHessian2DToVesselnessMeasureImageFilter.txx  itkHessian3DToFAVesselnessMeasureImageFilter.h  itkHessian3DToFAVesselnessMeasureImageFilter.txx  itkHessian3DToOrientationSimilarityMetricFilter.h  itkHessian3DToOrientationSimilarityMetricFilter.txx  itkHessianEigenValueDecomposition.h  itkHessianEigenValueDecomposition.txx  itkHessianSmoothed3DToVesselnessMeasureImageFilter.h  itkHessianSmoothed3DToVesselnessMeasureImageFilter.txx  itkHessianSmoothed3DToVesselnessMeasureImageVectorFilter.h  itkHessianSmoothed3DToVesselnessMeasureImageVectorFilter.txx  itkHuMomentsCalculator.h  itkHuMomentsCalculator.txx  itkIntensityFilter.h  itkMultiScaleHessian3DToFAOrientationVesselnessMeasureImageFilter.h  itkMultiScaleHessian3DToFAOrientationVesselnessMeasureImageFilter.txx  itkMultiScaleHessian3DToFAVesselnessMeasureImageFilter.h  itkMultiScaleHessian3DToFAVesselnessMeasureImageFilter.txx  itkMultiScaleHessian3DToOrientationSimilarityMetricFilter.h  itkMultiScaleHessian3DToOrientationSimilarityMetricFilter.txx  itkMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.h  itkMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.txx  itkMultiScaleHessianSmoothed3DToVesselnessMeasureImageVectorFilter.h  itkMultiScaleHessianSmoothed3DToVesselnessMeasureImageVectorFilter.txx  itkMultiScaleTensor3DToMaxLambda.h  itkMultiScaleTensor3DToMaxLambda.txx  itkMultiScaleVesselnessFilter.h  itkMultiScaleVesselnessFilter.txx  itkStructureTensorImageFilter.h  (+1 more)
misc/: CMakeLists.txt  cardiovasc_changetype.cpp  cardiovasc_pile.cpp  cardiovasc_regions.cpp  cardiovasc_subsample.cpp  cardiovasc_utils.cpp
process/: CMakeLists.txt  segment_withhistogram.cxx  vessel_binarise.cpp  vessel_filter.cpp
python/: process_csv.py
python/pyvesseltools/: LICENSE  README.rst  setup.py
python/pyvesseltools/docs/: Makefile  conf.py  index.rst  make.bat
python/pyvesseltools/tests/: test_file_wrapper.py  (+1 more)
scripts/: analyse_placenta.sh  pipeline_efthymios.sh  pipeline_efthymios_p2.sh  process_subvolume.sh  process_vol.sh  process_vol_1_split.sh  process_whole_placenta.sh  process_whole_placenta_p2.sh  vessel_script_example.sh
(+3 files in other folders)
